[package]
name = "gdk-registry"
version = "0.1.0"
edition = "2021"
autobins = false

# [[bin]]
# name = "make_hard_coded"

[dependencies]
bitcoin = { version = "0.29", features = [ "serde" ] }
elements = { version = "0.20", features = ["serde"] }
gdk-common = { path = "../gdk_common" }
log = "0.4"
once_cell = "1.12"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"
serde_json = "1.0"
tempfile = "3.2.0"
thiserror = "1.0"
ureq = { version = "2.4", features = ["json", "socks-proxy", "gzip", "brotli"] }

[dev-dependencies]
env_logger = "0.9.0"
httptest = "0.15.4"
rusty-fork = "0.3.0"
