[package]
name = "gdk-registry"
version = "0.1.0"
edition = "2021"
autobins = false

# [[bin]]
# name = "make_hard_coded"

[dependencies]
gdk-common = { path = "../gdk_common" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
env_logger = "0.10.0"
httptest = "0.15.4"
rusty-fork = "0.3.0"
tempfile = "3.2.0"
