[package]
name = "gdk-rust"
version = "0.1.0"
authors = ["Riccardo Casatta <riccardo@casatta.it>", "Nadav Ivgi <nadav@shesek.info>"]
license = "(MIT)"
edition = "2018"

[lib]
crate-type = ["staticlib"]


[dependencies]
gdk-common = { path = "../gdk_common" }
gdk-electrum = { path = "../gdk_electrum", features = ["testing"] }
gdk-registry = { path = "../gdk_registry" }
libc = "0.2"
log = "0.4.8"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
ureq = { version = "2.4.0", features = ["json", "socks-proxy", "gzip", "brotli"] }
url = "1.7.2"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8.6"

[dev-dependencies]
gdk-test = { path = "../gdk_test" }
tempfile = "3.2.0"
electrum-client = { version = "0.12.0", default-features = false, features = [ "proxy", "use-openssl" ] }
bitcoin = { version = "0.29", features = [ "serde" ] }
elements = { version = "0.20", features = ["serde"] }
# TODO: remove "legacy" feature when upgrading electrs binaries
electrsd = { version = "0.21.0", features = [ "legacy" ] }
ureq = { version = "2.4.0", features = ["json", "socks-proxy", "gzip", "brotli"] }
env_logger = "0.9.0"
base64 = "0.13"
