[package]
name = "gdk-rust"
version = "0.1.0"
authors = [
    "Riccardo Casatta <riccardo@casatta.it>",
    "Nadav Ivgi <nadav@shesek.info>",
]
license = "(MIT)"
edition = "2018"

[lib]
crate-type = ["staticlib"]


[dependencies]
gdk-common = { path = "../gdk_common" }
gdk-electrum = { path = "../gdk_electrum", features = ["testing"] }
gdk-registry = { path = "../gdk_registry" }
libc = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.8.6"

[dev-dependencies]
gdk-test = { path = "../gdk_test" }
tempfile = "3.2.0"
bitcoin = { version = "0.32", features = ["serde"] }
elements = { version = "0.25", features = ["serde"] }
# TODO: remove "legacy" feature when upgrading electrs binaries
electrsd = { version = "0.29.0", features = ["legacy"] }
env_logger = "0.10.0"
base64 = "0.13"
